# enel

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  fly.toml  package-lock.json  package.json  server.js
cad/: README.md  arducam_zero_fpv_camera_mount.scad  arducam_zero_fpv_camera_mount.stl  export_arducam_zero_mount_stl.py
drone_params/: arducopter_4.6.3_params_20260526_192609.param  arducopter_4.6.3_params_POSTCONFIG_20260526_201617.param
drone_tools/: arm_yaw_test.py  imu_cal.py
fly/: entrypoint.sh  mediamtx.yml  start.sh
mediamtx/: mediamtx.yml
raspi_zero_2_w_code/: README.md  batt-telemetry.py  batt-telemetry.service  bootstrap-pi.sh  captive-accept.service  captive-accept.sh  captive-accept.timer  launch_publisher.sh  mavlink-bridge.service  mavlink_bridge.py  pi-control.service  pi_control.py  provision-sd.sh  ring.py  streamer.conf.example  streamer.service  streamer.sh  wifi-j-autojoin.service  wifi-j-autojoin.sh  (+1 more)
video_to_gaussian_splat/: README.md  extract_frames.py  pyproject.toml  qc_select_frames.py  runpod_colmap.sh
video_to_gaussian_splat/experiments/: README.md  multifeed_minutes_experiment.md  ranked_pipeline_matrix.csv
video_to_gaussian_splat/splat/: __init__.py  cli.py  config.py  experiment_matrix.py  frames.py  instantsplat_pipeline.py  log.py  multiview.py  packaging.py  pipeline.py
video_to_gaussian_splat/splat/lambda_cloud/: __init__.py  bootstrap.sh  bootstrap_instantsplat.sh  client.py  provisioner.py  ssh.py
video_to_gaussian_splat/splat/remote/: export_splat.py  run_instantsplat.sh  run_sfm.sh  run_train.py
(+22 files in other folders)
